fixed margins for no text wrapping projects

--- a/main.css
+++ b/main.css
@@ -155,7 +155,7 @@ li:hover {
     font-size: 24px;
 }
 
-.projects-title {
+.projects-header {
     grid-column: 1/2;
     grid-row: 1/2;
     align-content: end;
@@ -167,14 +167,14 @@ li:hover {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
-    margin-right: 30px;
-    gap: 30px;
+    margin-right: 20px;
+    gap: 14px;
     padding-bottom: 24px;
     /* margin:8px; */
 } 
 
 .project {
-    padding: 8px;
+    padding: 12px;
     display: flex;
     flex-direction: column;
     background-color: white;
@@ -185,7 +185,12 @@ li:hover {
 }
 
 .project:hover {
-    border-left-width: 12px;
+    border-left-width: 11px;
+}
+
+.project-title {
+    font-weight: bold;
+    margin-bottom: 8px;
 }
 
 .project .icons {
@@ -195,7 +200,7 @@ li:hover {
     gap: 8px;
 }
 
-.announcements-title {
+.announcements-header {
     grid-column: 2/3;
     grid-row:1/2;
     align-content: end;
@@ -235,7 +240,7 @@ li:hover {
 
 }
 
-.trending-title {
+.trending-header {
     grid-column: 2/3;
     grid-row: 3/4;
     display: flex;
